--- a/ramadhan/css/jadwalsholat.css
+++ b/ramadhan/css/jadwalsholat.css
@@ -46,7 +46,7 @@ header::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('./image/masjid.webp');
+    background-image: url('../image/masjid.webp');
     background-size: cover;
     background-position: center;
     opacity: 0.2;
